@@ -5,6 +5,7 @@
 	* Rename publicKey to publicKeyModulus in the keypair class
 	* Fixed: wrong unserializaion of the extension configuration
 	* Added a configuration check and warnings in the backend if the check fails
+	* Added a warning if command line backend is used
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
